crybdir = $(includedir)/cryb

cryb_HEADERS = \
	algorithm.h \
	attributes.h \
	bitwise.h \
	cpe.h \
	digest.h \
	hash.h \
	hmac.h \
	hmac_sha1.h \
	hmac_sha224.h \
	hmac_sha256.h \
	hmac_sha384.h \
	hmac_sha512.h \
	hotp.h \
	md.h \
	md2.h \
	md4.h \
	md5.h \
	oath.h \
	oath_constants.h \
	oath_types.h \
	rand.h \
	rfc3986.h \
	rfc4648.h \
	sha.h \
	sha1.h \
	sha224.h \
	sha256.h \
	sha384.h \
	sha512.h \
	string.h \
	to.h \
	totp.h \
	version.h \
	wstring.h

noinst_HEADERS = \
	coverage.h \
	ctype.h \
	impl.h \
	nocoverage.h \
	strlcat.h \
	strlcmp.h \
	strlcpy.h
