# $Id$

AM_CPPFLAGS = -include $(top_srcdir)/include/cryb/nocoverage.h

noinst_LTLIBRARIES = librsaref.la

librsaref_la_SOURCES = \
	desc.c \
	digit.c \
	md2c.c \
	md5c.c \
	nn.c \
	prime.c \
	r_dh.c \
	r_encode.c \
	r_enhanc.c \
	r_keygen.c \
	r_random.c \
	r_stdlib.c \
	rsa.c
librsaref_la_CFLAGS = -DPROTOTYPES=1
